--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>CityGen</title>
-    <base href="/">
-
+    <base href="https://moulisse.github.io/CityGenerator/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.28a5b5aee287399e27c9.css"></head>
